# slea-ssem

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  AGENTS.md  ANALYSIS_SUMMARY.md  CLAUDE.md  CONTRIBUTING.en.md  CONTRIBUTING.ko.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.en.md  README.md  docker-compose.yml  how_to_setup_npm.md  pyproject.toml  requirements.txt  run.py  test.db  tox.ini
docs/: AGENT-REFACTORING-ASSESSMENT.md  AGENT-REFACTORING-COMPLETION-SUMMARY.md  ANSWER-SCHEMA-MISMATCH-ANALYSIS.md  ANSWER_SCHEMA_FORMATS.md  API_SYNC_FLOW_CLARIFICATION.md  AUTO-COMPLETE-AFTER-SCORE-PROPOSAL.md  CLI-FEATURE-REQUIREMENTS.md  CLI-QUICK-START.md  DB-PORT-Concept.md  DB_ARCHITECTURE_DIAGRAM.md  DB_QUICK_REFERENCE.md  DEV-PROGRESS.md  ERROR-RECOVERY-WORKFLOW.md  FIX-VERIFICATION-SUMMARY.md  FRONTEND-ERROR-HANDLING.md  FRONTEND_BACKEND_API_FLOW.md  GIT-PATCH-WORKFLOW.md  LITELLM_IMPROVEMENTS_IMPLEMENTED.md  LITELLM_NO_TOOL_RESULTS_ANALYSIS.md  MAKEFILE-GUIDE.md  POSTGRESQL-SETUP.md  PROMPT_SOLID_REFACTORING.md  QUICK-DECISION-TABLE.md  QUICK-TEST-GUIDE.md  REFACTOR-ADAPTIVE-QUESTIONS-SUMMARY.md  REFACTORING-TestResultsPage.md  SESSION-STATUS-IMPACT-ANALYSIS.md  SESSION-SUMMARY.md  SOLID_REFACTOR_REQUIREMENTS.md  SOLID_REFACTOR_SUMMARY.md  TECHNICAL-REVIEW-TIMEOUT-HANDLING.md  TODO-enhance-agent.txt  cli-architecture.md  concept-attempt-answers-score.md  concept-questions-answer-score-workflow.md  concept-test-session-lifecycle.md  db_structure_analysis.md  endpoint_analysis.md  feature_requirement_mvp1.md  phase2_test_design_req_b_b3_explain_2.md  (+6 more)
docs/archive/: AGENT-REQ-ID-ASSIGNMENT.md  AGENT-TEST-SCENARIO.md  ANSWER-SCHEMA-MISMATCH-ANALYSIS.md  BUG-ANALYSIS-LLM-JSON-PARSING.md  Dynamic_CLI_Design.md  FIX-VERIFICATION-SUMMARY.md  INDEX_DB_ANALYSIS.md  PENDING-TASK.md  QUICK-DECISION-TABLE.md  QUICK-TEST-GUIDE.md  REFACTORING-DECISION-SUMMARY.md  REQ-B-B2-Retake-SPECIFICATION.md  REQ-WORKFLOW.md  SETUP-REQ-WORKFLOW.md  TOOL_DEFINITIONS_SUMMARY.md  TOOL_DOCUMENTATION_INDEX.md
docs/progress/: .gitkeep  CLI-PROFILE-INTEGRATION.md  Debug-Answer-Schema-Fix.md  FIX-SSO-MOCK-TOKEN.md  REQ-A-ErrorHandling.md  REQ-A-FastMCP.md  REQ-A-LangChain.md  REQ-A-Mode1-Pipeline.md  REQ-A-Mode1-Test.md  REQ-A-Mode1-Tool1-PHASE2.md  REQ-A-Mode1-Tool1-PHASE3.md  REQ-A-Mode1-Tool1.md  REQ-A-Mode1-Tool2-PHASE2.md  REQ-A-Mode1-Tool2.md  REQ-A-Mode1-Tool4.md  REQ-A-Mode1-Tool5.md  REQ-A-Mode2-Pipeline.md  REQ-A-Mode2-Test.md  REQ-A-Mode2-Tool6.md  REQ-A-RoundID.md  REQ-B-A1.md  REQ-B-A2-Avail-2.md  REQ-B-A2-Avail-2_SPEC.md  REQ-B-A2-Avail-2_TESTS.md  REQ-B-A2-Edit.md  REQ-B-A2-Prof-4.md  REQ-B-A2-Prof-5.md  REQ-B-A2-Prof-6.md  REQ-B-A2.md  REQ-B-A3-1.md  REQ-B-B1.md  REQ-B-B2-Adapt.md  REQ-B-B2-Gen.md  REQ-B-B2-Plus.md  REQ-B-B2-Retake.md  REQ-B-B3-Explain-2.md  REQ-B-B3-Explain.md  REQ-B-B4-Plus.md  REQ-B-B4.md  REQ-B-B6-2.md  (+43 more)
infra/init-db.d/: 01-configure-auth.sh  01-configure-auth.sql
scripts/: generate_tools.sh  setup-postgresql.sh  test_agent_sanity_check.py
src/: __init__.py
src/agent/: __init__.py  config.py  data_contracts.py  error_handler.py  fallback_provider.py  fastmcp_server.py  llm_agent.py  output_converter.py  retry_strategy.py
src/backend/: config.py  database.py  main.py
src/cli/: client.py  context.py  main.py
src/frontend/: .env.example  ARCHITECTURE.md  COLOR_SCHEME.md  README.md  __init__.py  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tests/: __init__.py  conftest.py  test_cli_autosave_e2e.py
tests/agent/: conftest.py  test_agent_sanity_check.py  test_config.py  test_data_contracts.py  test_error_handling.py  test_fastmcp_server.py  test_llm_agent.py  test_mode1_pipeline.py  test_mode1_pipeline_integration.py  test_mode2_pipeline.py  test_mode2_pipeline_integration.py  test_mode2_pipeline_parallel.py  test_output_converter.py  test_round_id_generator.py  test_validate_question_tool.py
tests/backend/: test_adaptive_difficulty_service.py  test_adaptive_questions_endpoint.py  test_answer_schema_formats_doc.py  test_answer_schema_integration.py  test_answer_schema_transformers.py  test_answer_schema_value_object.py  test_auth_endpoint.py  test_auth_service.py  test_autosave_endpoint.py  test_autosave_endpoints.py  test_autosave_service.py  test_explain_service.py  test_history_service.py  test_nickname_validator.py  (+20 more)
tools/: commit.sh  data.sh  dev.sh  release.sh  req.sh
(+183 files in other folders)
